--- a/frontend/src/scss/SigIn.scss
+++ b/frontend/src/scss/SigIn.scss
@@ -1,4 +1,4 @@
-.sigin {
+.sigIn {
   min-width: 20%;
   min-height: 30vh;
   align-self: center;
@@ -7,9 +7,6 @@
   border-radius: 55px;
   h2 {
     margin: 20px 0;
-  }
-  .input-wrap {
-    margin: 5px;
   }
   button {
     margin: 17px 5px;
@@ -20,14 +17,14 @@
     cursor: pointer;
   }
 
-  .form-message {
+  .formMessageValid {
+    color: #4caf50;
     font-size: 10px;
     padding-top: 2px;
   }
-  .form-message.valid {
-    color: #4caf50;
-  }
-  .form-message.invalid {
+  .formMessageInvalid {
     color: #f44336;
+    font-size: 10px;
+    padding-top: 2px;
   }
 }
